CVS code -

- po/ca.po, po/es.po:
	- Catalan and Spanish translation updates (Jordi).

nano-1.1.6 - 01/25/2002
- General
	- Add Meta-A as alternate keyystroke for ^^ for people with
	  non-US keyboards.
	- Add Alt-G (NANO_ALT_GOTO_KEY) as alternate for goto dir in 
	  browser.
	- Better partial word checking code. New function 
	  search.c:is_whole_word(), changes to findnextstr(), 
	  and nano.c:do_int_spell_fix() (Rocco Corsi).
	- Added multiple-line regex support.  Format in .nanorc is
	  start="regex" end="regex".  Cleaned up nanorc:parse_colors(),
	  added parse_next_regex(), changes to edit_add in winio.c(), 
	  changes to colortype, cleaning up some old cruft. 
	- Upgrade to gettext 0.10.40, probably broke everything again :)
	- Upgraded to and then downgraded from automake 1.5, as there 
	  are severe security implications.
- color.c:
  do_colorinit()
	- Moved some comments and braces around so color can work 
	  w/slang (DLR).
- global.c:
  shorcut_init()
	- Replace hard coded ALT_G and ALT_H values in the replace
	  and goto shortcuts with their macro counterparts NANO_ALT_*_KEY.	
- nano.c:
  usage()
  	- Remove extra \n in --keypad description (Jordi).
  main()
	- Check that alt value is an alpha char before comparing to 
	  val - 32, fixes Alt-R calling doprev instead of replace.
  do_char()
	- Run edit_refresh() if ENABLE_COLOR is defined so adding
	  multi-liners will update (e.g. /* in C).
  do_int_spell_fix()
	- Temporarily unset REVERSE_SEARCH if it's set (Rocco Corsi).
  do_suspend()
	- Call tcsetattr() to restore the old terminal settings, so
	  tcsh can use ^C after suspend for example (fixes BUG #68).
  do_wrap()
	- Move "right" increment to part where new line is created, 
	  should change (fix?) some wrapping problems with autoindent.
  version()
  	- Show --enable-multibuffer independently of --enable-extra being
	  compiled in (Jordi).
- nano.h:
	- Changed color struct slightly, because of previous issue with